--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 	<div class="container-for-a-container">
 		<h4 class="title">Grand Blue Project</h4>
-		<p class="description">Press E to slash away the beasties!<br>Try not to let them get Katalina</p>
+		<p class="description">Press SPACE to slash away the beasties!<br>Try not to let them get Katalina</p>
 		<div class="game-container">
 			<div class="Katalina"></div>
 			<div class="monster"></div>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
 
