--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<!-- <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<meta property="og:image" content="https://i.imgur.com/K9jmhvj.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Rampart+One&family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Rampart+One&family=Roboto&display=swap" rel="stylesheet"> -->
 	<link rel="stylesheet" href="style.css" href="css/style.css">
     <title>Grand Blue Project</title>
 </head>
 <body>
 	<div class="container-for-a-container">
 		<h4 class="title">Grand Blue Project</h4>
-		<p class="description">Press SPACE to slash away the beasties!<br>Try not to let them get Katalina</p>
+		<p class="description">Press SPACE to slash away the beasties!<br>Try not to let them get Katalina!</p>
 		<div class="game-container">
 			<div class="Katalina"></div>
 			<div class="monster"></div>
 		</div>
 	</div>
-
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
