Menu code added, but not yet working

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="game-container">
 			<div class="Katalina"></div>
 			<div class="monster"></div>
+            <div class="restartPrompt"></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
